[package]
name = "taha-lang"
version = "0.1.0"
edition = "2021"
resolver = "2"

[workspace]
members = ["ast", "builtins", "evaluator", "lexer", "object", "parser", "token"]

[[bin]]
name = "taha"
path = "./cli.rs"

[dependencies]
parser = { path = "./parser", version = "*" }
evaluator = { path = "./evaluator", version = "*" }
object = { path = "./object", version = "*" }